modified tags,added styling and background image with dummy text tests

--- a/index.html
+++ b/index.html
@@ -6,23 +6,52 @@
     </head>
     <body>
         <div class="container">
-            <section id="gnome">
-            </section>
+            <header id="gnome">
+                <div class="gnometxt">
+                    <div class="gnomeh">
+                    <p>GNOME</p>
+                </div>
+                <div class="extra">
+                    <p>Having trouble viewing it? <span class="action">View Online.</span></p>
+                </div>
+                </div>
+            </header>
             <section id="coverpic">
+                <div class="cverimg">
+                    <img src="assets/big_img.jpg" alt>
+                </div>
+
+                <div class="pictxt">
+                    content\\content\\content\\content\\
+                    content\\content\\content\\content\\
+                    content\\content\\content\\content\\
+                    content\\content\\content\\content\\
+                    content\\content\\content\\content\\
+                    content\\content\\content\\content\\
+                    content\\content\\content\\content\\
+                </div>
+
             </section>
             <section id="post-heading">
+                content
             </section>
             <section id="editables">
+                content
             </section>
             <section id="iphonepic">
+                content
             </section>
             <section id="shoes">
+                content
             </section>
             <section id="ad">
+                ad
             </section>
             <section id="rcontent">
+                random
             </section>
             <footer>
+                contacts maybe?
             </footer>
          </div>
     </body>
