edited main content finally building the skeleton up

--- a/index.html
+++ b/index.html
@@ -18,28 +18,68 @@
             </header>
             <section id="coverpic">
                 <div class="cverimg">
-                    <img src="assets/big_img.jpg" alt>
+                    <img src="assets/big_img.jpg" alt/>
                 </div>
 
                 <div class="pictxt">
-                    content\\content\\content\\content\\
-                    content\\content\\content\\content\\
-                    content\\content\\content\\content\\
-                    content\\content\\content\\content\\
-                    content\\content\\content\\content\\
-                    content\\content\\content\\content\\
-                    content\\content\\content\\content\\
+                 "Simply send beautiful emails to people who matter."
+                    <hr>
+                    THe email marketing app for smart business.
+                    <hr>
                 </div>
 
             </section>
             <section id="post-heading">
-                content
+                 <h3>Main BLog Post Heading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod                      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo                        consequat. </p>
+                <div class="action">
+                    <a href="#" class="btn">Details</a>
+                </div>
+
             </section>
             <section id="editables">
-                content
+                <div class="columns">
+                    <div class="image">
+                        <img src="assets/logo_editable.png"/>
+                        <p>Editable</p>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur</p>
+                    </div>
+
+                </div>
+                <div class="columns">
+                    <div class="image">
+                        <img src="assets/logo_versatile.png"/>
+                        <p>Versatile</p>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur</p>
+                    </div>
+
+                </div>
+                <div class="columns">
+                    <div class="image">
+                        <img src="assets/logo_pro.png"/>
+                        <p>Professional</p>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur</p>
+                    </div>
+
+                </div>
+
             </section>
             <section id="iphonepic">
-                content
+                <div class="iph">
+                    <div class="iphtxt">
+                        <h3>Title Goes Here</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do                              eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    </div>
+                    <div class="iphimg">
+                        <img src="assets/img1.jpg"/>
+                    </div>
+                </div>
             </section>
             <section id="shoes">
                 content
@@ -51,7 +91,7 @@
                 random
             </section>
             <footer>
-                contacts maybe?
+                contacts maybe??
             </footer>
          </div>
     </body>
