modified style and missing html,also images added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
                 </div>
             </section>
             <section id="shoes">
-                content
+                <div class="shoez">
+                    <div class="shoepic">
+                        <img src="assets/img2.jpg"/>
+                    </div>
+                    <div class="shoetxt">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do                              eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+
             </section>
             <section id="ad">
                 ad
