--- a/index.html
+++ b/index.html
@@ -93,13 +93,17 @@
 
             </section>
             <section id="ad">
-                ad
+
+                <p>Add Space</p>
+                <p>600 x 120 px</p>
             </section>
             <section id="rcontent">
-                random
+                <h3>Title Goes Here</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do                              eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do                              eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet.</p>
             </section>
-            <footer>
-                contacts maybe??
+            <footer class="footer">
+                <p>COPYRIGHT 2015 - BUILT WITH A GNOMER</p>
+                <p><a href="#">View Online</a> | <a href="#">Unsubscribe</a></p>
             </footer>
          </div>
     </body>
