fixed header overlap problem

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <body>
         <div class="container">
             <header id="gnome">
-                <div class="gnometxt">
+   <!--removed div block here buggy bug :P-->             <!--<div class="gnometxt">-->
                     <div class="gnomeh">
                     <p>GNOME</p>
                 </div>
                 <div class="extra">
                     <p>Having trouble viewing it? <span class="action">View Online.</span></p>
                 </div>
-                </div>
+     <!--yup this block here-->          <!--- </div>-->
             </header>
             <section id="coverpic">
                 <div class="cverimg">
